# steel-mouse

./: .gitignore  alerts.py  api_server.py  auto_start.py  battery_estimator.py  build_app.bat  building.md  config.json  config.py  database.py  hosts_manager.py  i18n.py  knownissues.md  mock_mouse.py  mouse.py  mqtt_client.py  pyproject.toml  readme.md  requirements.txt  test_alerts.py  test_database.py  web_dashboard.py
.github/workflows/: windows-build.yml
innosetup/: setup.iss
static/: style.css
templates/: history.html  index.html  settings.html
