[project]
name = "mouse-battery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hidapi==0.14.0.post4",
    "pillow==11.2.1",
    "pystray==0.19.5",
    "rivalcfg==4.15.0",
    "setuptools==80.8.0",
    "six==1.17.0",
]
